--- a/app/src/main/res/layout/coffee_list_item.xml
+++ b/app/src/main/res/layout/coffee_list_item.xml
@@ -38,15 +38,14 @@
         app:srcCompat="@drawable/ic_bookmark"
         tools:visibility="gone"
         />
-    
+
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@id/list_wifi_icon"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_alignBottom="@id/list_title"
-        android:layout_alignParentEnd="true"
-        app:srcCompat="@drawable/ic_wifi"
-        />
+            android:id="@id/list_wifi_icon"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_alignBottom="@id/list_title"
+            android:layout_alignParentEnd="true"
+            app:srcCompat="@drawable/ic_wifi" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/list_distance"
@@ -77,17 +76,16 @@
         />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/list_chart_money_nodata"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/list_chart_money"
-        android:layout_alignBottom="@id/list_chart_money"
-        android:textSize="10sp"
-        android:textColor="@color/gray"
-        android:fontFamily="sans-serif"
-        android:text="@string/list_no_money_data"
-        android:visibility="gone"
-        tools:visibility="visible"
-        />
+            android:id="@+id/list_chart_money_nodata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/list_chart_money"
+            android:layout_alignBottom="@id/list_chart_money"
+            android:fontFamily="sans-serif"
+            android:text="@string/list_no_money_data"
+            android:textColor="@color/gray"
+            android:textSize="10sp"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
 </RelativeLayout>
